# OpenMx

./: .Rbuildignore  .Rbuildignore-cran  .Rbuildignore-npsol  .Rbuildignore.in  .covrignore  .dir-locals.el  .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES  CONTRIBUTING  DESCRIPTION  DESCRIPTION.bak  DESCRIPTION.in  LICENSE  Makefile  NAMESPACE  NEWS  NEWS.md  NOTICE  README  README.md  acsite.m4  cleanup  configure  configure.ac  configure.win  homer5.R  homer6.R  openmx-package-check.yml  package-check.yml  scratch_benchmark_ci.R  scratch_log.txt  test_out.txt
R/: 0ClassUnion.R  900.package.R  999.NonDocumentedObjects.R  CovarianceObjective.R  DefinitionVars.R  DiagMatrix.R  FullMatrix.R  IZeroMatrix.R  IdenMatrix.R  LowerMatrix.R  MxAlgebra.R  MxAlgebraConvert.R  MxAlgebraFunctions.R  MxAlgebraObjective.R  MxAlgebraTransform.R  MxApply.R  MxAutoStart.R  MxAvailableOptimizers.R  MxBaseNamed.R  MxBounds.R  MxCharOrNumber.R  MxCommunication.R  MxCompare.R  MxCompute.R  MxConstraint.R  MxCovarianceObjective.R  MxCycleDetection.R  MxData.R  MxDataWLS.R  MxDeparse.R  MxDependencies.R  MxDetectCores.R  MxDiff.R  MxErrorHandling.R  MxErrorPool.R  MxEval.R  MxEvaluate.R  MxExpectation.R  MxExpectationBA81.R  MxExpectationGREML.R  (+102 more)
data/: Bollen.txt  HS.ability.data.txt  HS.fake.data.txt  LongitudinalOverdispersedCounts.rda  Oscillator.txt  SimpleRawData.txt  demoOneFactor.csv  demoTwoFactor.csv  dzfData.txt  dzmData.txt  dzoData.txt  example1.csv  example2.csv  factorExample1.csv  factorScaleExample1.csv  factorScaleExample2.csv  iSEMex1.csv  iSEMex2.csv  iSEMfactorExample1.csv  iSEMfactorScaleExample1.csv  iSEMfactorScaleExample2.csv  iSEMlatentMultipleRegExample1.csv  iSEMlatentMultipleRegExample2.csv  jointdata.rda  latentAR_sim.txt  latentMultipleRegExample1.csv  latentMultipleRegExample2.csv  lazarsfeld.csv  multiData1.txt  myFADataRaw.txt  myGrowthMixtureData.txt  myRegData.txt  mzfData.txt  mzmData.txt  nhanesDemo.rda  nuclear_twin_design_data.txt  numHess1.txt  numHess2.txt  omxSymbolTable.tab  ordinalTwinData.rda  (+4 more)
demo/: 00Index  AlternativeApproaches.R  BivariateCorrelation.R  BivariateCorrelation20090925.R  BivariateHeterogeneity_MatrixRaw.R  BivariateHeterogeneity_PathRaw.R  BivariateSaturated.R  BivariateSaturated_MatrixCov.R  BivariateSaturated_MatrixCovCholesky.R  BivariateSaturated_MatrixRaw.R  BivariateSaturated_MatrixRawCholesky.R  BivariateSaturated_PathCov.R  BivariateSaturated_PathRaw.R  BootstrapParallel.R  DefinitionMeans_MatrixRaw.R  DefinitionMeans_PathRaw.R  ETC88.R  FIMLRowObjectiveBivariateCorrelation.R  GrowthMixtureModelRandomStarts.R  GrowthMixtureModel_MatrixRaw.R  GrowthMixtureModel_PathRaw.R  LDE.R  LGC_MatrixRaw.R  LGC_PathRaw.R  LISRELJointFactorModel.R  LatentGrowthCurveModel_MatrixRaw.R  LatentGrowthCurveModel_PathRaw.R  LatentGrowthCurveModel_PathRaw_ModelRec.R  LatentGrowthCurveModel_PathRaw_ObjectAdd.R  MatrixAlgebra.R  MatrixAlgebra20090924.R  MultipleRegression_MatrixCov.R  MultipleRegression_MatrixRaw.R  MultipleRegression_PathCov.R  MultipleRegression_PathRaw.R  MultivariateRegression_MatrixCov.R  MultivariateRegression_MatrixRaw.R  MultivariateRegression_PathCov.R  MultivariateRegression_PathRaw.R  MxPathDemo.R  (+65 more)
devdocs/: MxROperatorsFunctions.lyx
docs/: Makefile  conf.py  extract  index.rst  make.bat  rcheck  substVersion
inst/: CITATION  CITATION.in  WORDLIST
man/: Bollen_data.Rd  HS.ability.data.Rd  LongitudinalOverdispersedCounts.Rd  MxAlgebra-class.Rd  MxAlgebraFunction.Rd  MxBounds-class.Rd  MxCI-class.Rd  MxCharOrList-class.Rd  MxCharOrNumber-class.Rd  MxConstraint-class.Rd  MxData-class.Rd  MxExpectationGREML-class.Rd  MxFitFunctionGREML-class.Rd  README  (+243 more)
man-roxygen/: args-chkpt.R  args-dots-barrier.R  args-model.R  args-regularize.R  args-verbose.R  ref-manual.R
(+1468 files in other folders)
